Replace .collect(Collectors.toList()) by simply .toList()