@@ -1,5 +1,9 @@
 package nl.bertriksikken.stofradar.samenmeten.csv;
 
+import com.fasterxml.jackson.core.JacksonException;
+import com.fasterxml.jackson.dataformat.csv.CsvMapper;
+import com.fasterxml.jackson.dataformat.csv.CsvSchema;
+
 import java.io.File;
 import java.io.FileWriter;
 import java.io.IOException;
@@ -8,12 +12,7 @@ import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Scanner;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
-
-import com.fasterxml.jackson.core.JacksonException;
-import com.fasterxml.jackson.dataformat.csv.CsvMapper;
-import com.fasterxml.jackson.dataformat.csv.CsvSchema;
 
 public final class SamenmetenCsv {
 
@@ -33,7 +32,7 @@ public final class SamenmetenCsv {
         // parse each individual line
         SamenmetenCsv csv = new SamenmetenCsv();
         for (String line : lines) {
-            List<String> fields = Stream.of(line.split(", ", -1)).map(String::trim).collect(Collectors.toList());
+            List<String> fields = Stream.of(line.split(", ", -1)).map(String::trim).toList();
             SamenmetenCsvLuchtEntry entry = SamenmetenCsvLuchtEntry.from(fields);
             if (entry != null) {
                 csv.add(entry);
